--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,3 +1,9 @@
 {
-  "extends": "next/core-web-vitals"
+  "extends": ["next/core-web-vitals", "prettier"],
+  "rules": {
+    "react/no-unknown-property": [
+      "error",
+      { "ignore": ["property", "key", "jsx", "global"] }
+    ]
+  }
 }
